--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:animated-vector-drawable:28.0.0'
-    implementation 'com.android.support:mediarouter-v7:26.1.0'
+    implementation 'com.android.support:mediarouter-v7:28.0.0'
     implementation 'com.android.support:multidex:1.0.3'
-    //implementation 'com.google.android.gms:play-services-maps:16.1.0'
-    implementation 'com.google.android.gms:play-services:12.0.1'
+    //Google maps
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    //implementation 'com.google.android.gms:play-services:12.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -35,6 +36,8 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.2'
+    //Google location
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
 
 //For Gradle Plugin 1.5 or below
@@ -47,4 +50,10 @@ android {
     aaptOptions {
         additionalParameters "--no-version-vectors"
     }
+}
+
+android { sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/utils'] } } }
+
+android {
+    sourceSets { main { resources.srcDirs = ['src/main/resources', 'src/main/resources/'] } }
 }
