--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.nosmogrunner"
-        minSdkVersion 15
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -38,6 +38,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     //Google location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    //Google directions
+    //implementation 'com.google.maps:google-maps-services:0.9.3'
+    //implementation 'org.slf4j:slf4j-nop:1.7.25'
+    implementation 'com.google.android.libraries.places:places:1.1.0'
+
 }
 
 //For Gradle Plugin 1.5 or below
