--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,14 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     //Google location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+
     //Google directions
-    //implementation 'com.google.maps:google-maps-services:0.9.3'
+    // https://mvnrepository.com/artifact/com.google.maps/google-maps-services
+    implementation group: 'com.google.maps', name: 'google-maps-services', version: '0.9.3'
     //implementation 'org.slf4j:slf4j-nop:1.7.25'
     implementation 'com.google.android.libraries.places:places:1.1.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'org.slf4j:slf4j-nop:1.7.25'
 
 }
 
@@ -54,6 +58,10 @@ android {
     // Flag notifies aapt to keep the attribute IDs around
     aaptOptions {
         additionalParameters "--no-version-vectors"
+    }
+    compileOptions{
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
