--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.nosmogrunner"
-        minSdkVersion 15
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -36,6 +36,11 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.2'
+
+    //Google directions
+    implementation 'com.google.maps:google-maps-services:0.9.3'
+    implementation 'org.slf4j:slf4j-simple:1.7.25'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     //Google location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
@@ -49,6 +54,10 @@ android {
     // Flag notifies aapt to keep the attribute IDs around
     aaptOptions {
         additionalParameters "--no-version-vectors"
+    }
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
     }
 }
 
