--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:animated-vector-drawable:28.0.0'
     implementation 'com.android.support:mediarouter-v7:28.0.0'
@@ -36,13 +36,13 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.2'
-
     //Google directions
     implementation 'com.google.maps:google-maps-services:0.9.3'
     implementation 'org.slf4j:slf4j-simple:1.7.25'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     //Google location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
 }
 
 //For Gradle Plugin 1.5 or below
