--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,12 @@ dependencies {
     //Google location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
+
+    //Toast default
+    implementation 'com.muddzdev:styleabletoast:2.0.1'
+    implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+
 }
 
 //For Gradle Plugin 1.5 or below
