--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,8 @@ dependencies {
 
     //Toast default
     implementation 'com.muddzdev:styleabletoast:2.0.1'
-    implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 }
 
